# scara_robots_kinematics_solver

./: CMakeLists.txt  package.xml  scara_robots_kinematics_solver_description.xml
include/: scara_robots_kinematics_solver.hpp
src/: scara_robots_kinematics_solver.cpp
