<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>scara_robots_kinematics_solver</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jure@ahil.si">jure</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>moveit_common</depend>

  <depend>moveit_core</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_ros_planning</depend>
  <depend>eigen</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <moveit_core plugin="${prefix}/scara_robots_kinematics_solver_description.xml"/>
  </export>
</package>
